--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@tiptap/extension-underline": "2.4.0",
     "@tiptap/react": "2.4.0",
     "@tiptap/starter-kit": "2.4.0",
+    "@vercel/analytics": "^1.6.1",
     "class-variance-authority": "0.7.0",
     "dayjs": "1.11.11",
     "lucide-react": "0.363.0",
